--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,8 @@ edition = "2018"
 actix-web = { version = "3.3.2", features=["openssl"] }
 actix-files = "0.5.0"
 # actix-rt = "2.0.2"
-openssl = "0.10.33"
+actix-cors = "0.5.4"
+openssl = "0.10.34"
 serde_json = "1.0.64"
 awc = "2.0.3"
 percent-encoding = "2.1.0"
