--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,12 @@ edition = "2018"
 [dependencies]
 # actix = "0.11.0-beta.2"
 actix-web = { version = "3.3.2", features=["openssl"] }
-actix-files = "0.5.0"
+# actix-files = "0.5.0"
+actix-service = ""
+futures-core = ""
+futures-util = ""
 # actix-rt = "2.0.2"
-actix-cors = "0.5.4"
+actix-cors = ""
 openssl = "0.10.34"
 serde_json = "1.0.64"
 awc = "2.0.3"
