--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,11 +10,11 @@ edition = "2018"
 # actix = "0.11.0-beta.2"
 actix-web = { version = "3.3.2", features=["openssl"] }
 # actix-files = "0.5.0"
-actix-service = ""
-futures-core = ""
-futures-util = ""
+actix-service = "^1.0.6"
+futures-core = "0.3.15"
+futures-util = "0.3.15"
 # actix-rt = "2.0.2"
-actix-cors = ""
+actix-cors = "0.5.4"
 openssl = "0.10.34"
 serde_json = "1.0.64"
 awc = "2.0.3"
