--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ openssl = "0.10.34"
 serde_json = "1.0.64"
 awc = "2.0.3"
 percent-encoding = "2.1.0"
+zbus = "1.9.1"
 
 [[bin]]
 name = "github-markdown-notebook"
